--- a/TBA/BONNotificationsSettingsView.storyboard
+++ b/TBA/BONNotificationsSettingsView.storyboard
@@ -9,7 +9,7 @@
         <!--Notifications Settings-->
         <scene sceneID="lCp-6V-aI1">
             <objects>
-                <viewController storyboardIdentifier="Notifications" id="LgU-Qb-rt3" customClass="BONNotificationsSettings" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="notifications" id="LgU-Qb-rt3" customClass="BONNotificationsSettings" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="pFO-oX-8Bd"/>
                         <viewControllerLayoutGuide type="bottom" id="iOB-L2-sgY"/>
@@ -21,11 +21,17 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="ixd-Uh-gAj" userLabel="All Pickers">
                                 <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="z4b-n7-ukP" userLabel="Breakfast Picker and Switch">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="186"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Set Your Notifications" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LaS-bw-i7g">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="37"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="z4b-n7-ukP" userLabel="Breakfast Picker and Switch">
+                                        <rect key="frame" x="0.0" y="30" width="600" height="162"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Gh-rM-nhH">
-                                                <rect key="frame" x="0.0" y="0.0" width="122" height="31"/>
+                                                <rect key="frame" x="239" y="0.0" width="122" height="31"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Breakfast" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cj9-sK-WZA">
                                                         <rect key="frame" x="0.0" y="0.0" width="73" height="31"/>
@@ -39,7 +45,7 @@
                                                 </subviews>
                                             </stackView>
                                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" useCurrentDate="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jQ6-ZN-HOb">
-                                                <rect key="frame" x="0.0" y="31" width="600" height="155"/>
+                                                <rect key="frame" x="0.0" y="31" width="600" height="131"/>
                                                 <date key="date" timeIntervalSinceReferenceDate="482065200.53681999">
                                                     <!--2016-04-11 11:00:00 +0000-->
                                                 </date>
@@ -49,11 +55,11 @@
                                             <constraint firstItem="jQ6-ZN-HOb" firstAttribute="width" secondItem="z4b-n7-ukP" secondAttribute="width" id="DS4-NY-xfC"/>
                                         </constraints>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="P73-LC-6QA" userLabel="Lunch Picker and Switch">
-                                        <rect key="frame" x="0.0" y="186" width="600" height="186"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="P73-LC-6QA" userLabel="Lunch Picker and Switch">
+                                        <rect key="frame" x="0.0" y="192" width="600" height="162"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7lr-aE-A8D">
-                                                <rect key="frame" x="0.0" y="0.0" width="97" height="31"/>
+                                                <rect key="frame" x="252" y="0.0" width="97" height="31"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lunch" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DmT-wz-mbi">
                                                         <rect key="frame" x="0.0" y="0.0" width="48" height="31"/>
@@ -66,10 +72,10 @@
                                                     </switch>
                                                 </subviews>
                                             </stackView>
-                                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="Edt-VP-JiZ">
-                                                <rect key="frame" x="0.0" y="31" width="600" height="155"/>
-                                                <date key="date" timeIntervalSinceReferenceDate="482077500.53681999">
-                                                    <!--2016-04-11 14:25:00 +0000-->
+                                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" useCurrentDate="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Edt-VP-JiZ">
+                                                <rect key="frame" x="0.0" y="31" width="600" height="131"/>
+                                                <date key="date" timeIntervalSinceReferenceDate="482083200.53681999">
+                                                    <!--2016-04-11 16:00:00 +0000-->
                                                 </date>
                                             </datePicker>
                                         </subviews>
@@ -77,11 +83,11 @@
                                             <constraint firstItem="Edt-VP-JiZ" firstAttribute="width" secondItem="P73-LC-6QA" secondAttribute="width" id="v6c-5y-04K"/>
                                         </constraints>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="NmN-68-Igb" userLabel="Dinner Picker and Switch">
-                                        <rect key="frame" x="0.0" y="372" width="600" height="185"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="NmN-68-Igb" userLabel="Dinner Picker and Switch">
+                                        <rect key="frame" x="0.0" y="354" width="600" height="162"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ute-dz-ze3">
-                                                <rect key="frame" x="0.0" y="0.0" width="100" height="31"/>
+                                                <rect key="frame" x="250" y="0.0" width="100" height="31"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dinner" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4yy-i7-EkY">
                                                         <rect key="frame" x="0.0" y="0.0" width="51" height="31"/>
@@ -94,10 +100,10 @@
                                                     </switch>
                                                 </subviews>
                                             </stackView>
-                                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="Dxm-Vy-0Pr">
-                                                <rect key="frame" x="0.0" y="31" width="600" height="154"/>
-                                                <date key="date" timeIntervalSinceReferenceDate="482077500.53681999">
-                                                    <!--2016-04-11 14:25:00 +0000-->
+                                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" useCurrentDate="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dxm-Vy-0Pr">
+                                                <rect key="frame" x="0.0" y="31" width="600" height="131"/>
+                                                <date key="date" timeIntervalSinceReferenceDate="482101200.53681999">
+                                                    <!--2016-04-11 21:00:00 +0000-->
                                                 </date>
                                             </datePicker>
                                         </subviews>
@@ -105,9 +111,21 @@
                                             <constraint firstItem="Dxm-Vy-0Pr" firstAttribute="width" secondItem="NmN-68-Igb" secondAttribute="width" id="izf-QX-DWR"/>
                                         </constraints>
                                     </stackView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IZ1-c8-Bvh">
-                                        <rect key="frame" x="0.0" y="557" width="600" height="23"/>
-                                        <state key="normal" title="Set Notification Times"/>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xTy-H9-n4u">
+                                        <rect key="frame" x="0.0" y="516" width="600" height="32"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="31"/>
+                                        <state key="normal" title="Back"/>
+                                        <connections>
+                                            <action selector="backButton:" destination="LgU-Qb-rt3" eventType="touchUpInside" id="qFW-Li-McG"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J5b-oo-wxr">
+                                        <rect key="frame" x="0.0" y="548" width="600" height="32"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="31"/>
+                                        <state key="normal" title="Submit"/>
+                                        <connections>
+                                            <action selector="submit:" destination="LgU-Qb-rt3" eventType="touchUpInside" id="d3P-f5-rwY"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
