--- a/TBA/BONLogin.storyboard
+++ b/TBA/BONLogin.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="LDu-RC-ROD">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="5ae-3u-lGv">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -18,46 +18,47 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mEz-t3-Bao">
-                                <rect key="frame" x="273" y="285" width="55" height="30"/>
-                                <state key="normal" title="Sign Up"/>
+                                <rect key="frame" x="231" y="241" width="138" height="30"/>
+                                <state key="normal" title="New User? Sign Up!"/>
                                 <connections>
-                                    <action selector="addUserTapped:" destination="5ae-3u-lGv" eventType="touchUpInside" id="So8-lp-AWr"/>
+                                    <action selector="newUserSignUpTapped:" destination="5ae-3u-lGv" eventType="touchUpInside" id="8uz-Gf-Clu"/>
+                                    <segue destination="Q8f-HB-eIQ" kind="show" id="Zpk-ki-1PJ"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cLO-KW-LK0" userLabel="Username">
-                                <rect key="frame" x="228" y="161" width="145" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="145" id="D9F-vM-nks"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eVa-RE-r9O" userLabel="Password">
-                                <rect key="frame" x="228" y="213" width="145" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="145" id="YFh-at-iXX"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BfK-Gb-esB">
-                                <rect key="frame" x="281" y="313" width="38" height="30"/>
+                                <rect key="frame" x="281" y="207" width="38" height="30"/>
                                 <state key="normal" title="Login"/>
                                 <connections>
                                     <action selector="loginTapped:" destination="5ae-3u-lGv" eventType="touchUpInside" id="6rV-is-SU8"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cLO-KW-LK0">
+                                <rect key="frame" x="234" y="117" width="133" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="133" id="Crg-rc-v9B"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eVa-RE-r9O" userLabel="Password Text Field">
+                                <rect key="frame" x="234" y="169" width="133" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="133" id="SZV-Mu-wuu"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="eVa-RE-r9O" firstAttribute="centerX" secondItem="mEz-t3-Bao" secondAttribute="centerX" id="3wK-7a-vfz"/>
-                            <constraint firstItem="BfK-Gb-esB" firstAttribute="top" secondItem="mEz-t3-Bao" secondAttribute="bottom" constant="-2" id="4sr-0o-1lZ"/>
-                            <constraint firstItem="mEz-t3-Bao" firstAttribute="centerX" secondItem="tmx-qJ-zAr" secondAttribute="centerX" id="8t0-5j-xvG"/>
-                            <constraint firstItem="mEz-t3-Bao" firstAttribute="top" secondItem="eVa-RE-r9O" secondAttribute="bottom" constant="42" id="DS0-AV-UzG"/>
-                            <constraint firstItem="mEz-t3-Bao" firstAttribute="centerY" secondItem="tmx-qJ-zAr" secondAttribute="centerY" id="GuJ-E6-S7f"/>
-                            <constraint firstItem="mEz-t3-Bao" firstAttribute="top" secondItem="cLO-KW-LK0" secondAttribute="bottom" constant="94" id="UnA-4T-bho"/>
-                            <constraint firstItem="BfK-Gb-esB" firstAttribute="centerX" secondItem="mEz-t3-Bao" secondAttribute="centerX" id="b7Q-sg-n1B"/>
-                            <constraint firstItem="cLO-KW-LK0" firstAttribute="centerX" secondItem="mEz-t3-Bao" secondAttribute="centerX" id="uj9-GA-n1b"/>
+                            <constraint firstItem="mEz-t3-Bao" firstAttribute="centerX" secondItem="BfK-Gb-esB" secondAttribute="centerX" id="ALU-oD-3ML"/>
+                            <constraint firstItem="BfK-Gb-esB" firstAttribute="top" secondItem="eVa-RE-r9O" secondAttribute="bottom" constant="8" id="BF9-k8-6ub"/>
+                            <constraint firstItem="cLO-KW-LK0" firstAttribute="top" secondItem="UFa-rE-EC2" secondAttribute="bottom" constant="97" id="Ibf-hW-Ey0"/>
+                            <constraint firstItem="BfK-Gb-esB" firstAttribute="centerX" secondItem="eVa-RE-r9O" secondAttribute="centerX" id="scD-Jx-oEB"/>
+                            <constraint firstItem="eVa-RE-r9O" firstAttribute="top" secondItem="UFa-rE-EC2" secondAttribute="bottom" constant="149" id="t8A-TQ-f95"/>
+                            <constraint firstItem="eVa-RE-r9O" firstAttribute="centerX" secondItem="tmx-qJ-zAr" secondAttribute="centerX" id="tlQ-ST-2yj"/>
+                            <constraint firstItem="mEz-t3-Bao" firstAttribute="top" secondItem="BfK-Gb-esB" secondAttribute="bottom" constant="4" id="vl2-99-oF2"/>
+                            <constraint firstItem="cLO-KW-LK0" firstAttribute="centerX" secondItem="tmx-qJ-zAr" secondAttribute="centerX" id="whV-aQ-0LC"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="uLe-Ag-mlw"/>
@@ -70,49 +71,13 @@
             </objects>
             <point key="canvasLocation" x="1463" y="435"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="d7J-uG-1Tn">
+        <!--containerViewController-->
+        <scene sceneID="b0w-Eo-QQO">
             <objects>
-                <viewController id="spu-Gt-nQo" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="40P-Kl-cGy"/>
-                        <viewControllerLayoutGuide type="bottom" id="OpF-dT-E3g"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="7HP-Mq-NoA">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="You're Logged In!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ri3-Go-WfD">
-                                <rect key="frame" x="186" y="240" width="400" height="83"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="38"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="EkB-8U-Z3M" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardName="BONContainer" referencedIdentifier="containerViewController" id="Q8f-HB-eIQ" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HsN-44-tRA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2118" y="441"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="BYR-in-dyd">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="LDu-RC-ROD" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="FJ8-2F-DiZ">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="5ae-3u-lGv" kind="relationship" relationship="rootViewController" id="tL0-rM-bAX"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="zbq-Qx-ckl" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="651" y="435"/>
+            <point key="canvasLocation" x="1983.5" y="435"/>
         </scene>
     </scenes>
 </document>
